Add lecture-5.qmd to _quarto.yml and update index.qmd

--- a/2023-2024/Machine Learning/_quarto.yml
+++ b/2023-2024/Machine Learning/_quarto.yml
@@ -15,6 +15,7 @@ website:
         - lecture-2.qmd
         - lecture-3.qmd
         - lecture-4.qmd
+        - lecture-5.qmd
       - section: "Labs"
         contents:
         - lab-1.qmd
